@@ -13,6 +13,7 @@ Backwards compatibility notes
 * The deprecated features have been removed
     * FOF40\Encrypt\AesAdapter\AdapterInterface::setEncryptionMode() no longer has the second parameter (strength).
     * Passing null to FOF40\Model\DataModel::blacklistFilters instead of using getBlacklistFilters
+    * FOF40\Utils\StringHelper::toSlug()
 * The AkeebaStrapper renderer has been removed. Use the Joomla3 renderer isntead
 
 *** LEGEND ***
